@@ -14,7 +14,7 @@ macro_rules! rv2res {
 	($rv:expr, $ok:expr) => {
 		match $rv {
 			0 => Ok($ok),
-			e => Err($crate::error::Error::from_code(e as u32)),
+			e => Err($crate::error::Error::from(e as u32)),
 			}
 	};
 
@@ -196,7 +196,7 @@ pub(crate) fn nng_to_duration(ms: nng_sys::nng_duration) -> Option<Duration>
 pub(crate) fn validate_ptr<T>(rv: c_int, ptr: *mut T) -> Result<NonNull<T>>
 {
 	if rv != 0 {
-		Err(Error::from_code(rv as u32))
+		Err(Error::from(rv as u32))
 	}
 	else {
 		Ok(NonNull::new(ptr).expect("NNG returned a null pointer from a successful function"))
